# Historical-Food-Shocks

./: .flake8  404.html  LICENSE  README.md  environment.yml  index.html  mkgendocs.yml  pyproject.toml  requirements.txt  search.html
data/: fao_crop_production_comprehensive.csv  number-of-countries.csv
docs/: LLM prompt.txt  gephi.gephi  gephi_first_attempt.gephi
results/: calories.csv  calories_by_countries.csv  calories_by_groups_of_countries.csv  calories_by_regions.csv  correlation_matrix.csv  country_world_correlations.csv  gephi_edges.csv  historical_frequency_results.csv  largest_crop_shock_by_country.csv  largest_crop_shock_by_country_with_reasons.csv  largest_food_shock_by_country.csv  largest_food_shock_by_country_with_reasons.csv  yield_changes.csv  yield_changes_by_countries.csv  yield_changes_by_groups_of_countries.csv  yield_changes_by_regions.csv
scripts/: check_values.ipynb  edge_detection_check.ipynb  shock_rate.ipynb  visualize_filter.ipynb
search/: search_index.json
src/: US Verification.py  calculate_food_shocks.py  calculate_historical_frequency.py  calculate_largest_shock.py  calculate_yearly_calories.py  country_world_correlations.py  create_gephi_files.py  get_FAO_data.py  plot_compare_shock_reasons.py  plot_countries_by_countries_per_decade.py  plot_country_world_correlations.py  plot_maps.py  pyRMT.py  run_everything.py
tests/: test_calorie_calculations.py  test_calories_consistency.py  test_correct_data_selection.py  test_country_world_correlations.py  test_get_FAO_data.py  test_historical_frequency.py  test_shock_calculations.py
(+6 files in other folders)
